GNOME Bugzilla – Bug 739789
v4l2allocator: fix error message if allocator is already active
Last modified: 2014-11-07 15:45:02 UTC
Message if allocator is already active is currently wrong in allocator_start(), we have not request any buffer from drivers.
Created attachment 290177 [details] [review] v4l2allocator: fix error message if allocator is already active
Review of attachment 290177 [details] [review]: Oops, copy paste error clearly, thanks for spotting.
Comment on attachment 290177 [details] [review] v4l2allocator: fix error message if allocator is already active commit 36532f507094361a42d24da79cdcbf6ab3b965e0 Author: Aurélien Zanelli <aurelien.zanelli@parrot.com> Date: Fri Nov 7 16:11:24 2014 +0100 v4l2allocator: fix error message if allocator is already active https://bugzilla.gnome.org/show_bug.cgi?id=73978
And for 1.4.5 commit 3b8ad44804dc269bfd26b84e7707f7efeb5b2e44 Author: Aurélien Zanelli <aurelien.zanelli@parrot.com> Date: Fri Nov 7 16:11:24 2014 +0100 v4l2allocator: fix error message if allocator is already active https://bugzilla.gnome.org/show_bug.cgi?id=739789