v4l2allocator: fix error message if allocator is already active

https://bugzilla.gnome.org/show_bug.cgi?id=739789